# bigquery_timeseries

./: README.md  setup.cfg  setup.py
bigquery_timeseries/: __init__.py  logger.py  logging.py  uploader.py
bigquery_timeseries/sql/: __init__.py  basic.py  protocol.py  resample.py
bigquery_timeseries/uploader/: __init__.py  base.py  bq_uploader.py  gcs_uploader.py  schema_manager.py  utils.py
