[metadata]
name = bigquery_timeseries
version = 0.1.0
author = Your Name
author_email = your.email@example.com
description = A custom library for working with BigQuery timeseries data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/bigquery_timeseries
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    # Add your dependencies here
python_requires = >=3.6
